--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -73,7 +73,7 @@
   color: white;
   font-family: 'Teko', sans-serif;
   font-style: regular;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 100%;
 }
 
